# folhs

./: Makefile  README.md  folhs.cabal  stack.yaml
src/lib/: FOL.hs
src/lib/SMTLib/: Parser.hs  Writer.hs
