name:                folhs
version:             1.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library

  ghc-options:
    -Wall -Wno-name-shadowing -fno-ignore-asserts

  build-depends:
      base
    , containers

  exposed-modules:
      FOL
    , SMTLib.Lexer
    , SMTLib.Parser
    , SMTLib.Writer
 
  hs-source-dirs:
      src/lib
  
  default-language:
    Haskell2010
